# K-Context

./: .gitignore  pyproject.toml
docs/: README.md  architecture.md  data_contracts.md  module_interfaces.md  project_spec.md  rag_pipeline.md  testing_and_evaluation.md
src/k_context/: __init__.py
src/k_context/application/: __init__.py  answer_service.py  ask_mcp_tool_loop.py  chunking_service.py  cleaning_service.py  config_service.py  deeprag_service.py  document_parser.py  embedding_provider.py  evaluation_service.py  index_service.py  kb_service.py  llm_client.py  mcp_client_bridge.py  mcp_contracts.py  mcp_registry.py  mcp_tools.py  metrics_collector.py  prompt_builder.py  retrieval_service.py  tool_schema_adapter.py  vector_store.py
src/k_context/domain/: __init__.py  models.py
src/k_context/infrastructure/: __init__.py
src/k_context/infrastructure/embedding/: __init__.py  sentence_transformer_provider.py
src/k_context/infrastructure/llm/: __init__.py  openai_compatible_client.py
src/k_context/infrastructure/mcp_client/: __init__.py  stdio_client.py
src/k_context/infrastructure/mcp_server/: __init__.py  stdio_server.py
src/k_context/infrastructure/parsers/: __init__.py  markdown_parser.py  pdf_parser.py  text_parser.py
src/k_context/infrastructure/storage/: __init__.py  local_store.py
src/k_context/infrastructure/vector_stores/: __init__.py  chroma_store.py
src/k_context/presentation/: __init__.py  cli.py
tests/: test_chunking.py  test_kb_add.py  test_kb_ask.py  test_kb_index_search.py  test_kb_init.py
